BoLibDll/BoLibGetValues.h

struct GamesInfo;
struct SpanishRegional;
DLLEXPORT int			getError();
DLLEXPORT const char	*getErrorText();
DLLEXPORT int			getDoorStatus();
DLLEXPORT int			refillKeyStatus();
DLLEXPORT int			getCredit();
DLLEXPORT int			getBank();
DLLEXPORT int			getCountryCode();
DLLEXPORT char			*getCountryCodeStr();
DLLEXPORT const char	*getLastGame(int index);
DLLEXPORT unsigned long	getWinningGame(int index);
DLLEXPORT unsigned long	getPerformanceMeter(unsigned char Offset);
DLLEXPORT unsigned long	getGamePerformanceMeter(unsigned int Offset, unsigned int MeterType);
DLLEXPORT unsigned int	getLocalMasterVolume();
DLLEXPORT unsigned long	getGameModel(int index);
DLLEXPORT unsigned int  getGameTime(int index);
DLLEXPORT unsigned int	getGameDate(int index);
DLLEXPORT unsigned int  getGameWager(int index);
DLLEXPORT unsigned int  getGameCreditLevel(int index);
DLLEXPORT unsigned int	getSwitchStatus(unsigned char offset, unsigned char mask);
DLLEXPORT unsigned int	getLastNote(int index);
DLLEXPORT unsigned int	*getLastNotes();
DLLEXPORT unsigned int	getHopperFloatLevel(unsigned char hopper);
DLLEXPORT unsigned int	getHopperDivertLevel(unsigned char hopper);
DLLEXPORT unsigned char	getHopperDumpSwitchActive();
DLLEXPORT unsigned char	getHopperDumpSwitch();
DLLEXPORT unsigned int	getRequestEmptyLeftHopper();
DLLEXPORT unsigned int	getRequestEmptyRightHopper();
DLLEXPORT unsigned char	getBnvType();
DLLEXPORT unsigned int	getRecyclerFloatValue();
DLLEXPORT signed int	getRefillCtr(unsigned char hopper);
DLLEXPORT unsigned char getLeftHopper();
DLLEXPORT unsigned char	getMiddleHopper();
DLLEXPORT unsigned char	getRightHopper();
DLLEXPORT unsigned int	getMinPayoutValue();
DLLEXPORT unsigned long	getCashIn(int meter);
DLLEXPORT unsigned long	getCashOut(int meter);
DLLEXPORT unsigned long	getNotesIn(int meter);
DLLEXPORT unsigned long	getNotesOut(int meter);
DLLEXPORT unsigned long	getRefillValue(int meter);
DLLEXPORT unsigned char hopper();