BoLibDll/BoLibSetValues.h

DLLEXPORT int	setEnvironment();
DLLEXPORT void	closeSharedMemory();