1525/BoLibNative/NativeBoLib.cs

using System;
using System.Runtime.InteropServices;

namespace PDTUtils.Native
{
	[StructLayout(LayoutKind.Sequential)]
	public struct GamesInfo
	{
		[MarshalAs(UnmanagedType.LPStr)]
		public string name;
		[MarshalAs(UnmanagedType.LPStr)]
		public string hash_code;
		[MarshalAs(UnmanagedType.LPStr)]
		public string path;

		public string Name { get; set; }
		public string HashCode { get; set; }
		public string Path { get; set; }
	}

    [StructLayout(LayoutKind.Sequential)]
    struct SpanishRegional
    {
        public uint MaxStake;
        public uint MaxStakeFromBank;
        public uint StakeMask;
        public uint MaxWinPerStake;
        public uint MaxCredit;
        public uint MaxReserve;
        public uint MaxBank;
        public uint MaxPlayerPoints;
        public uint NoteEscrow;
        public uint Rtp;
        public uint Gtime;
        public uint ChangeValue;
        public uint MaxNote;
        public uint BankToCredits;
        public uint ChargeConvertPoints;
        public uint CycleSize;
        public uint FastTransfer;
        public uint GamesPerPeriod;
    }
    
    enum Hoppers
    {
        Left            = 0x00,
        Middle          = 0x01,
        Right           = 0x02,
        HopperLeftMask  = 0x10,
        NoHopper        = 0x100
    }

    enum Performance
    {
        MoneyInLt = 0,
        MoneyOutLt,
        HandPayLt,
        CashboxLt,
        NoGamesLt,
        WageredLt,
        WonLt,
        MoneyInSt,
        MoneyOutSt,
        HandPaySt,
        CashboxSt,
        NoGamesSt,
        WageredSt,
        WonSt
    }
    
    enum GamePerformance
    {
        GameWageredLt = 0,
        GameWonLt,
        GamePlayLt,
        GameWageredSt,
        GameWonSt,
        GamePlaySt,
        MaxGameMeters,
        GameStOffSetP = (MaxGameMeters / 2)
    }
    
    public enum ELongTermMeters
    {
        NoteSix = 0,
        NoteFive,
        NoteFour,
        NoteThree, 
        NoteTwo,
        NoteOne,

        CoinEight,
        CoinSeven,
        CoinSix,
        CoinFive,
        CoinFour,
        CoinThree,
        CoinTwo,
        //CoinOne, = 13
        
        TitoIn,
        CMatchIn,
        PointsIn,

        RefillL,
        RefillR,

        NoteOneOut,
        NoteTwoOut,
        NoteThreeOut,
        NoteFourOut,
        NoteFiveOut,
        NoteSixOut,

        CoinSixOut,
        CoinFiveOut,
        CoinFourOut,
        CoinThreeOut,
        CoinTwoOut,
        TicketOut,
        CMatchOut,
        PointsOut
    }

    enum EShortTermMeters
    {
        NoteSix = 32,
        NoteFive,
        NoteFour,
        NoteThree,
        NoteTwo,
        NoteOne,

        CoinEight,
        CoinSeven,
        CoinSix,
        CoinFive,
        CoinFour,
        CoinThree,
        CoinTwo,
      //  CoinOne,
        
        TitoIn,
        CMatchIn,
        PointsIn,

        RefillL,
        RefillR,

        NoteOneOut,
        NoteTwoOut,
        NoteThreeOut,
        NoteFourOut,
        NoteFiveOut,
        NoteSixOut,

        CoinSixOut,
        CoinFiveOut,
        CoinFourOut,
        CoinThreeOut,
        CoinTwoOut,
        TicketOut,
        CMatchOut,
        PointsOut
    }
    
    enum CashMatchMeters
    {
        CashMatchIn1Lt = 0, //£5  - LT
        CashMatchIn2Lt,     //£10 - LT
        CashMatchIn3Lt,     //£20 - LT
        CashMatchIn1St,     //£5  - ST
        CashMatchIn2St,     //£10 - ST
        CashMatchIn3St      //£20 - ST
    }

    enum RewardMeters
    {
        RewardInLt,
        RewardOutLt,
        RewardCardInLt,
        RewardInSt,
        RewardOutSt,
        RewardCardInSt
    }

    enum DemoPlayMeters
    {
        DemoPlayMoneyOutLt,
        DemoPlayNoGamesLt,
        DemoPlayMoneyInLt,
        DemoPlayMoneyOutSt,
        DemoplayNoGamesSt,
        DemoPlayMoneyInSt
    }
    
    enum EspRegionalBase
    {
        MaxStakeCredits = 0,
        MaxStakeBank,
        StakeMask,
        GambleWinFactor,
        MaxCredits,
        MaxReserveCredits,
        MaxBank,
        EscrowState,
        Rtp,
        GameTime,
        GiveChangeThreshold,
        MaxBankNote,
        AllowBankToCredit,
        ChargeConverPlayerPoints,
        FastTransfer,
        Cycle,
        MaxPlayerPoints,
        GphPeriod
    }
    
    
    enum EspRegionalExt
    {
        EspAlwaysFichas = 18,
        EspAutoTfxToStake = 19
    }
    
    enum UtilBits
    {
        Allow               = 0x00000001,
        EEPromUpdate        = 0x00000002,
        ChangeRnv           = 0x00000004,
        EmptyRecycler       = 0x00000008,
        RecyclerValue       = 0x00000010,
        TitoAudit           = 0x00000020,
        AddToCredit         = 0x00000040,
        RefillCoins         = 0x00000080,
        CoinTest            = 0x00000100,
        NoteTest            = 0x00000200,
        PrintTicket         = 0x00000400,
        RereadBirthCert     = 0x00000800,
        TopupLeftHopper	    = 0x00001000,
        TopupRightHopper    = 0x00002000,
        DumpLeftHopper      = 0x00004000,
        DumpRightHopper     = 0x00008000,
        TestLeftHopper      = 0x00010000,
        TestRightHopper     = 0x00020000,
        ReadCpuEventsBit    = 0x00040000
    }
    
    enum CollectType
    {
        ErrNoCollect    = 0,
        NoCollect       = 1,
        Printer         = 2,
        HandPay         = 3,
        Hopper          = 4,
        HandPayAll      = 5
    }

    enum SmartCardSubGroups
    {
        CashMatchFive       = 0,
        CashMatchTen        = 1,
        CashMatchTwenty     = 2,
        NONE                = 3
    }

    enum CabinetTypes
    {
        VEGAS = 0,
        SLANT,
        TS22,
        TS22_2015,
        BS100_2014,
        ADVTS23
    }

    static class BoLib
    {
#if DEBUG
        const string DLL_NAME = "BoLibDllD.dll";
#else
        const string DLL_NAME = "BoLibDll.dll";
#endif
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int setEnvironment();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern void closeSharedMemory();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int getDoorStatus();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int getCountryCode();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public static extern string getCountryCodeStr();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int refillKeyStatus();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int getError();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public static extern string getCurrentError();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public static extern string getErrorText();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi)]
        [return: MarshalAs(UnmanagedType.LPStr)]
        public static extern string getLastGame(int index);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U4)]
        public static extern UInt32 getWinningGame(int index);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong getPerformanceMeter(byte offset);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern ulong getGamePerformanceMeter(uint offset, uint meterType);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int getLocalMasterVolume();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U4)]
        public static extern UInt32 getGameModel(int index);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 getGameTime(int index);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 getGameDate(int index);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getGameCreditLevel(int index);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getGameWager(int index);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getSwitchStatus(byte offset, byte mask);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int getCredit();
        
        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int getBank();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getLastNote(int index);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint[] getLastNotes();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getHopperFloatLevel(byte hopper);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getHopperDivertLevel(byte hopper);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte getHopperDumpSwitchActive();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte getHopperDumpSwitch();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getRequestEmptyLeftHopper();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getRequestEmptyRightHopper();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte getBnvType();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getRecyclerFloatValue();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern int getRefillCtr(byte hopper);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte getLeftHopper();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte getMiddleHopper();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern byte getRightHopper();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern uint getMinPayoutValue();

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 getCashIn(int meter);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 getCashOut(int meter);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 getNotesIn(int meter);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 getNotesOut(int meter);

        [DllImport(DLL_NAME, CallingConvention = CallingConvention.Cdecl)]
        public static extern UInt32 getRefillValue(int meter);
